--- a/resume/index.html
+++ b/resume/index.html
@@ -41,6 +41,68 @@
             
         </section>
         <section id="skills">
+            <div class="skill-title">
+                <img src="skills.png" alt="">
+                <span>SKILLS</span>
+            </div>
+            <div class="skill-content">
+                <div class="skill1">
+                    <div class="bar">
+                        <div class="bar-inner ninty-five bar-red">
+                            <span class="text-properties">C++</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill2">
+                    <div class="bar">
+                        <div class="bar-inner fourty bar-pink">
+                            <span class="text-properties">Java</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill3">
+                    <div class="bar">
+                        <div class="bar-inner fifty bar-yellow">
+                            <span class="text-properties">Java Script</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill4">
+                    <div class="bar">
+                        <div class="bar-inner fifty bar-green">
+                            <span class="text-properties">Python</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill5">
+                    <div class="bar">
+                        <div class="bar-inner eighty bar-orange">
+                            <span class="text-properties">HTML&CSS</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill6">
+                    <div class="bar">
+                        <div class="bar-inner bar-blue seventy">
+                            <span class="text-properties">NodeJS</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill7">
+                    <div class="bar">
+                        <div class="bar-inner bar-green-yellow ninty">
+                            <span class="text-properties">Express</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill8">
+                    <div class="bar">
+                        <div class="eighty bar-inner bar-tomato">
+                            <span class="text-properties">React</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
         <section id="education">
