--- a/resume/index.html
+++ b/resume/index.html
@@ -115,7 +115,41 @@
 
         </section>
         <section id="contact">
-
+            <div class="contact-title">
+                <img src="phone.png" alt="">
+                <span>Contact</span>
+            </div>
+            <div class="contact-content">
+                <form class="contact-content-left" action="">
+                    <div><input class="input" type="text" placeholder="Your Name"></div>
+                    <div><input class="input" type="email" name="Email" id="" placeholder="Your Email"></div>
+                        <!-- <div><input type="text" name="Message" id="text-area" placeholder="Your Message" ></div> -->
+                    <textarea name="message" id="text-area" cols="70" rows="30" placeholder="Message"></textarea>
+                    <div ><input id="submit" type="submit" value="SEND MESSAGE"></div>
+                </form>
+                <div class="contact-content-right">
+                    <h3 class="heading">Get in touch</h3>
+                    <p class="normal-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, dolore sed. 
+                        Laudantium repellendus aut illum similique! Dolor, debitis id. Officiis cumque 
+                        accusamus est nostrum voluptate.
+                    </p>
+                    <h3 class="heading">My Address</h3>
+                    <img src="location.png" alt="">
+                    <span class="normal-text logo-text">Andhra Pradesh, India</span><br><br>
+                    <img src="call.png" alt="">
+                    <span class="normal-text logo-text">6302672800</span><br><br>
+                    <img src="location.png" alt="">
+                    <span class="normal-text logo-text">thotasasikumarreddy@gmail.com</span><br><br>
+                </div>
+            </div>
+            <div class="social-media">
+                <a href="#"><img src="facebook.webp" alt=""></a>
+                <a href=""><img src="linkedin.webp" alt=""></a>
+                <a href=""><img src="instagram.webp" alt=""></a>
+                <a href=""><img src="twitter.webp" alt=""></a>
+            </div>
+            
         </section>
     </main>
     
